<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Favoritos</string>
    <string name="nomas_una">Nomás Una</string>
    <string name="entrar">Entrar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="volver_al_inicio">volver al inicio</string>
    <string name="registrarme">Registrarme</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="inicioregistro">Ya tienes tu nueva cuenta!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="logout">logout</string>
    <string name="perfil">Perfil</string>
    <string name="salir">Salir</string>
    <string name="inicio">Inicio</string>
    <string name="usuario">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfiltitle">Perfil</string>
    <string name="mis_pedidos">Mis Pedidos</string>
    <string name="ayuda">Ayuda</string>
    <string name="acercadenosotros">Acerca de nosotros</string>
    <string name="feedback">FeedBack</string>
    <string name="favs">Favoritos</string>
    <string name="cervezas">Cervezas</string>
    <string name="cerveza_corona">Corona</string>
    <string name="_18_00">$ 18.00</string>
    <string name="a_adir">añadir</string>
    <string name="m_s">Más...</string>
    <string name="tequilas">Tequilas</string>
    <string name="botanas">Botanas</string>
    <string name="ron">Ron</string>
    <string name="victoria">Victoria</string>
    <string name="modelo_esp">Modelo Especial</string>
    <string name="modelo_osc">Modelo Negra</string>
    <string name="miperfil">Mi Perfil</string>
    <string name="eslogan">Disfrita de lo mejor de la fiesta sin tener que salir de casa</string>
    <string name="saludoholamiperfil">Hola de nuevo!</string>
    <string name="preferencias">Preferencias</string>
    <string name="cont_ctanos">Contáctanos</string>
    <string name="m_todo_de_pago">Método de Pago</string>
    <string name="title_activity_usuario_card">usuarioCardAct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="volver">Volver</string>
    <string name="numtarj">Número de Tarjeta</string>
    <string name="cvv">CVV</string>
    <string name="expdate">Fecha de Expiración</string>
    <string name="contactanos">Contáctanos</string>
    <string name="nombre">Tu nombre</string>
    <string name="asunto">Estoy interesado en...</string>
    <string name="mensaje">Tu mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="qui_nes_somos">¿Quiénes Somos?</string>
    <string name="quienessomos">En Los Mandaderos estamos comprometidos con la seguridad de todas las personas. Creemos que no hay nada de malo con la fiesta, el alcohol y el pasarla bien, sin embargo, para la comidad de todos y todas las personas, hemos decidio brindar un servicio de delivery de bebidas y botanas de tu preferencia, para que no tengas que exponerte ni a los demás a ningún peligro, y puedas continuar con tu fiesta sin tener mayor preocupación.</string>
    <string name="ajustes">Ajustes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_valora2">ValoraActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>