<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_splash"
        android:scaleType="centerCrop"
        android:src="@drawable/cerveza"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="-73dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:text="@string/nomas_una"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:layout_marginTop="100dp"
        android:background="@drawable/custombutton"
        android:gravity="center"
        android:hint="@string/username"
        android:textColorHint="#FFFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextz"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custombutton"
        android:gravity="center"
        android:hint="@string/password"
        android:textColorHint="#FFFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextz2" />

    <EditText
        android:id="@+id/editTextz3"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custombutton"
        android:gravity="center"
        android:hint="@string/email"
        android:textColorHint="#FFFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editTextz2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custombutton"
        android:gravity="center"
        android:hint="@string/direccion"
        android:textColorHint="#FFFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextz3" />

    <Button
        android:id="@+id/btn_splash2"
        android:layout_width="233dp"
        android:layout_height="47dp"
        android:background="@drawable/bg_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/registrarme"
        android:textStyle="bold"
        android:onClick="registrarme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextz2" />

    <Button
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:onClick="vlogin"
        android:text="@string/volver_al_inicio"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_splash2"
        app:layout_constraintVertical_bias="0.644" />

</androidx.constraintlayout.widget.ConstraintLayout>