<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactoActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_splash"
        android:scaleType="centerCrop"
        android:src="@drawable/cerveza"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="-73dp" />

    <LinearLayout
        android:id="@+id/titleuserinfo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/shadow"
        android:elevation="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="#476f95"
            android:clickable="true"
            android:contentDescription="@string/contactanos"
            android:drawableRight="@drawable/baseline_arrow_back_24"
            android:onClick="regresarprofile"
            android:textSize="36dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#476f95"
        android:text="@string/contactanos"
        android:textColor="#FFF"
        android:textSize="26dp" />

</LinearLayout>


    <EditText
        android:id="@+id/editTxt_Name"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/custombutton"
        android:gravity="center"
        android:hint="@string/nombre"
        android:textColorHint="#FFFBF6"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleuserinfo"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/editTxt_Interests"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/custombutton"
        android:gravity="center"
        android:hint="@string/asunto"
        android:textColorHint="#FFFBF6"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt_Name"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/editTxt_Message"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:background="@drawable/custombutton"
        android:gravity="center_horizontal"
        android:hint="@string/mensaje"
        android:textColorHint="#FFFBF6"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt_Interests"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/btn_sendContact"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt_Message" />

</androidx.constraintlayout.widget.ConstraintLayout>