<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.userProfileAct">

  <LinearLayout
      android:id="@+id/titleuserinfo"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:background="@drawable/shadow"
      android:elevation="30dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal"
      android:weightSum="2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:background="#476f95"
        android:clickable="true"
        android:onClick="regresarprofile"
        android:drawableRight="@drawable/baseline_arrow_back_24"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#476f95"
        android:text="@string/miperfil"
        android:textColor="#FFF"
        android:textSize="26dp" />

  </LinearLayout>

  <TextView
      android:id="@+id/buscador"
      android:layout_width="match_parent"
      android:paddingLeft="15dp"
      android:layout_height="50dp"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="10dp"
      android:background="@drawable/bg_button"
      android:drawableStart="@drawable/ic_baseline_payment_24"
      android:gravity="center_vertical"
      android:text="  Ingresa una dirección"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintTop_toBottomOf="@+id/titleuserinfo"
      tools:layout_editor_absoluteX="20dp" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginEnd="230dp"
      android:layout_marginBottom="450dp"
      android:background="#000"
      android:src="@drawable/ic_baseline_person_pin_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buscador" />

    <TextView
        android:id="@+id/hola_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="500dp"
        android:text="@string/saludoholamiperfil"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscador"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="400dp"
        android:text="@string/eslogan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscador" />

    <EditText
        android:id="@+id/name_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/btn_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:text="Usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/email_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/btn_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:text="Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dir_user"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/dir_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/btn_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:text="Direccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_user"
        app:layout_constraintVertical_bias="0.047" />

  <LinearLayout
      android:layout_width="370dp"
      android:layout_height="60dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal"
      android:weightSum="4"
      app:layout_constraintBottom_toTopOf="@+id/monedero"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email_user">

    <Button
        android:id="@+id/favs"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textColor="#000"
        android:onClick="ajustes"
        android:background="@android:color/transparent"
        android:text="@string/preferencias"/>

    <Button
        android:id="@+id/favsi"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textColor="#000"
        android:onClick="contactanos"
        android:background="@android:color/transparent"
        android:text="@string/cont_ctanos"/>

  </LinearLayout>

    <Button
        android:id="@+id/monedero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="Configurar Perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_user" />

    <Button
        android:id="@+id/perfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="Método de Pago"
        android:onClick="pago"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monedero" />


</androidx.constraintlayout.widget.ConstraintLayout>